<resources>
    <string name="app_name">Assingment1</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">Currency App</string>
    <string name="amount_text">Amount:</string>
    <string name="from_text">From:</string>
    <string name="to_text">To:</string>
    <string name="total_text">Total:</string>
    <string name="defaul_status_text">Status:</string>

    <string-array name="currency_names_long">
        <item>EUR</item>
        <item>USD</item>
        <item>JPY</item>
        <item>BGN</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>GBP</item>
        <item>HUF</item>
        <item>PLN</item>
        <item>RON</item>
        <item>SEK</item>
        <item>CHF</item>
        <item>NOK</item>
        <item>HRK</item>
        <item>RUB</item>
        <item>TRY</item>
        <item>AUD</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CNY</item>
        <item>HKD</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>SGD</item>
        <item>THB</item>
        <item>ZAR</item>
    </string-array>

    <string-array name="currency_names_short">
        <item>EUR</item>
        <item>USD</item>
        <item>JPY</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>HKD</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_title">Settings</string>
    <string name="more_codes_checkbox">More Country Codes</string>

</resources>
