<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="10"
    tools:context="com.example.mossy.assingment1.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/main_title"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_row="0"
        android:layout_rowWeight="1"
        android:height="20dp"
        android:gravity="center"
        android:text="@string/title_text"
        android:textSize="30sp" />

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight=".5"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:gravity="end|center_vertical"
        android:text="@string/amount_text"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/currency_edit_box_1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="4"
        android:layout_row="1"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:textSize="30sp"
        />

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight=".5"
        android:layout_row="2"
        android:layout_rowWeight="1"
        android:gravity="end|center_vertical"
        android:text="@string/from_text"
        android:textAllCaps="false"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/currency_spinner_1"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_row="2"
        android:layout_rowWeight="1"

        android:textAlignment="center" />

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight=".5"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:gravity="end|center_vertical"
        android:text="@string/to_text"
        android:textSize="30sp"
        />

    <Spinner
        android:id="@+id/currency_spinner_2"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_row="3"
        android:layout_rowWeight="1"
        android:textAlignment="center" />

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_columnWeight=".5"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:gravity="end|center_vertical"
        android:text="@string/total_text"
        android:textSize="30sp"
        />
    <TextView
        android:id="@+id/currency_edit_box_2"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:layout_row="4"
        android:layout_rowWeight="1"
        android:gravity="center"
        android:inputType="number"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/stats_text"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_columnWeight="1"
        android:layout_row="5"
        android:layout_rowWeight="2"
        android:background="@color/statusTextBackground"
        android:gravity="start"
        android:inputType="number"
        android:padding="@dimen/fab_margin"
        android:text="@string/defaul_status_text"
        android:textSize="15sp"
        />
</GridLayout>
